--- a/hobbies.html
+++ b/hobbies.html
@@ -8,7 +8,7 @@
     1. Tennis<br />
     2. Movies
     <hr />
-    <form action="mailto:ramsaichandan@gmail.com" method="post">
+    <form action="mailto:ramsaichandan@gmail.com" method="post" enctype="text/plain">
     <label>Your Hobbies:</label>
     <textarea name="name" id="" cols="30" rows="10"></textarea>
 
